# linguaalayam

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  linguaalayam.sql.gz.dvc  pyproject.toml
.dvc/: config
.github/workflows/: base-image.yml  bump.yml  cd.yml  ci.yml  codeql.yml  db-restore.yml  deploy.yml  eval.yml
alembic/: env.py
alembic/versions/: 1ef24e85322f_initial_schema.py  7a81e174cf96_add_created_at_and_embedding_field.py  c2a4f6b8d0e2_add_pg_trgm_fuzzy_search.py  fa3eefb53b00_add_unique_constraint_source_headword.py
android/: README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/linguaalayam/app/: Application.java  DelegationService.java  LauncherActivity.java
android/app/src/main/res/values/: strings.xml
conf/: config.yaml
conf/corpus/: all.yaml
conf/database/: supabase.yaml
conf/embedding/: model.yaml
config/: config.yaml
config/corpus/: all.yaml  debug.yaml
config/database/: local.yaml  supabase.yaml
config/debug/: default.yaml
config/embedding/: model.yaml
config/eval/: default.yaml
config/llm/: anthropic.yaml  huggingface.yaml  nollm.yaml  openai.yaml
config/rag/: default.yaml
data/: db_corpus.dvc
data/eval/: queries.jsonl  queries_en.jsonl  queries_ml.jsonl
docs/: architecture.md  roadmap.md  setup.md  user-guide.md
linguaalayam/: env.py  morphology.py  transliteration.py
linguaalayam/api/: __init__.py  app.py  dependencies.py  oauth.py  web.py
linguaalayam/corpus/: base.py  datuk.py  dravidian.py  ekkurup.py  en_ml.py  enml.py  sayahna.py
linguaalayam/database/: __init__.py  queries.py  session.py
linguaalayam/embeddings/: __init__.py  service.py
linguaalayam/eval/: README.md  __init__.py  dataset.py  main.py  metrics.py  model_compare.py  prepare_corpus_sample.py  prepare_eval_queries.py  runner.py  seed.py
linguaalayam/llm/: __init__.py  provider.py
linguaalayam/llm/adapters/: __init__.py  anthropic.py  base.py  nollm.py  openai.py
linguaalayam/mcp/: README.md  __init__.py  remote.py  server.py  shared.py
linguaalayam/models/: __init__.py  entries.py  orm.py
linguaalayam/rag/: README.md  SKILLS.md  __init__.py  main.py  pipeline.py  query_understanding.py  reranker.py  retriever.py  tools.py
linguaalayam/scripts/: __init__.py  debug_retriever.py  ingest.py  vector_checkpoint.py
linguaalayam/static/: manifest.json  sw.js
linguaalayam/static/locales/: en.json  ml.json
linguaalayam/templates/: base.html  index.html  mcp_setup.html  privacy.html  settings.html
linguaalayam/templates/partials/: results.html
linguaalayam/translation/: __init__.py  base.py  marian.py
migrations/: env.py
notebooks/: explore.ipynb  mcp_testing.ipynb
scripts/: db_dump_to_dvc.sh  db_restore.sh  deploy.sh  ingest.py
tests/: conftest.py  test_transliteration.py
tests/api/: test_mcp_oauth.py  test_web.py
tests/corpus/: test_corpus.py  test_datuk.py  test_dravidian.py  test_ekkurup.py  test_sayahna.py
tests/database/: conftest.py  test_queries.py  test_queries_extended.py  test_session.py  test_session_extended.py
tests/embeddings/: test_service.py
tests/eval/: test_dataset.py  test_eval_main.py  test_metrics.py  test_runner.py  test_seed.py
tests/llm/: test_adapters.py  test_provider.py
tests/mcp/: test_server.py
tests/models/: test_doctests.py  test_entries.py  test_orm.py
tests/rag/: test_main.py  test_pipeline.py  test_query_understanding.py  test_reranker.py  test_tools.py
tests/scripts/: test_checkpoint.py  test_debug_retriever.py  test_ingest.py  test_ingest_extended.py  test_retriever.py
