[tool.poetry]
name = "linguaalayam"
version = "0.5.0-rc.0"
description = "Malayalam dictionary RAG pipeline and MCP server"
authors = ["Sachin Nandakumar"]
readme = "README.md"
packages = [{ include = "linguaalayam" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pgvector = "^0.3"
sentence-transformers = "^3.0"
hydra-core = "^1.3"
omegaconf = "^2.3"
numpy = "^1.26"
python-dotenv = "^1.0"
langgraph = ">=0.2"
langchain = ">=0.3"
langchain-core = ">=0.3"
langchain-anthropic = ">=0.3"
anthropic = ">=0.40"
pydantic = ">=2.0"
langchain-openai = ">=0.3"
mcp = {version = ">=1.0", extras = ["cli"]}
pyyaml = ">=6.0"
fastapi = {version = ">=0.110", extras = ["standard"]}
uvicorn = {version = ">=0.29", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-markdown-docs = ">=0.5"
ruff = "^0.15"
pre-commit = "^4.5.1"
pytest-cov = "^7.1.0"
jupyterlab = "^4.5.7"
ipykernel = "^7.2.0"
pandas = ">=2.0,<3.0"
alembic = "^1.18.4"
tqdm = "^4.66"
commitizen = "^4.0"

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
transformers = ">=4.40"
accelerate = ">=0.30"

[tool.poetry.scripts]
ingest = "linguaalayam.scripts.ingest:main"
debug-retriever = "linguaalayam.scripts.debug_retriever:main"
rag = "linguaalayam.rag.main:main"
eval = "linguaalayam.eval.main:main"
mcp-server = "linguaalayam.mcp.server:main"
api-server = "linguaalayam.api.app:main"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
version_scheme = "semver2"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = false

[tool.pytest.ini_options]
addopts = "--markdown-docs"
testpaths = ["tests", "docs"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations/", "notebooks/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
