[tool.poetry]
name = "linguaalayam"
version = "2.8.0"
description = "Your companion for Malayalam and English words - abode of words."
authors = ["Sachin Nandakumar"]
readme = "README.md"
packages = [{ include = "linguaalayam" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pgvector = "^0.3"
sentence-transformers = "^3.0"
hydra-core = "^1.3"
omegaconf = "^2.3"
numpy = "^1.26"
python-dotenv = "^1.0"
langgraph = ">=0.2"
langchain-core = ">=0.3"
langchain-anthropic = ">=0.3"
pydantic = ">=2.0"
langchain-openai = ">=0.3"
mcp = {version = ">=1.0", extras = ["cli"]}
pyyaml = ">=6.0"
fastapi = {version = ">=0.110", extras = ["standard"]}
uvicorn = {version = ">=0.29", extras = ["standard"]}
jinja2 = ">=3.1,<4.0"
httpx = ">=0.27"
indic-transliteration = "^2.3.82"
ml2en = "^1.0.0"
mlmorph = "^1.4.0"
sentencepiece = ">=0.1.99"
alembic = "^1.18.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-markdown-docs = ">=0.5"
ruff = "^0.15"
pre-commit = "^4.5.1"
pytest-cov = "^7.1.0"
jupyterlab = "^4.5.7"
ipykernel = "^7.2.0"
pandas = ">=2.0,<3.0"
tqdm = "^4.66"
commitizen = "^4.0"
djlint = "^1.36.4"
mlflow = "^2.0"
dvc = "^3.67.1"
dvc-ssh = "^4.3.0"
interrogate = "^1.7.0"

[tool.poetry.group.cpu]
optional = false

[tool.poetry.group.cpu.dependencies]
torch = {version = ">=2.0", source = "pytorch-cpu"}

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
transformers = ">=4.40"
accelerate = ">=0.30"

[tool.poetry.scripts]
# Production servers
mcp-server = "linguaalayam.mcp.server:main"
api-server = "linguaalayam.api.app:main"

# Ingestion and debugging — require a live database
ingest = "linguaalayam.scripts.ingest:main"
debug-retriever = "linguaalayam.scripts.debug_retriever:main"
rag = "linguaalayam.rag.main:main"

# Evaluation — require a live database (run eval-prepare-queries first)
eval-retrieval = "linguaalayam.eval.main:main"
eval-prepare-corpus = "linguaalayam.eval.prepare_corpus_sample:main"
eval-prepare-queries = "linguaalayam.eval.prepare_eval_queries:main"

# Evaluation — offline (only corpus_sample.jsonl required, generated by eval-prepare-corpus)
eval-embedding = "linguaalayam.eval.model_compare:main"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
version_scheme = "semver2"
tag_format = "v$version"
major_version_zero = false
update_changelog_on_bump = false

[tool.pytest.ini_options]
addopts = "--markdown-docs"
testpaths = ["tests", "docs"]

[tool.coverage.run]
omit = [
    # require live DB or HuggingFace models — not unit-testable
    "linguaalayam/eval/model_compare.py",
    "linguaalayam/eval/prepare_corpus_sample.py",
    "linguaalayam/eval/prepare_eval_queries.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations/", "notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-nested-functions = false
fail-under = 80
verbose = 0
omit-covered-files = false
exclude = ["migrations", "notebooks"]

[tool.djlint]
profile = "jinja"
# H021 inline styles — intentional single-file CSS approach
# H025 orphan tags — false positives from Jinja logic spanning blocks
# H031 meta keywords — optional SEO tag
# J004/J018 url_for — FastAPI serves static/internal URLs directly
ignore = "H021,H025,H031,J004,J018"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
